# Scorch

./: README.md  Scorch.sln  test.js  text.sh
Blaze/src/: CMakeLists.txt  FlameClient.cpp  FlameClient.h  PCH.h  Program.cpp  SampleTest_Test.cpp  SampleTest_Test.h  TestRunner.cpp
Blaze/src/FlameGenFiles/: FlameService.cpp  FlameService.h  FlameService_server.skeleton.cpp  Flame_constants.cpp  Flame_constants.h  Flame_types.cpp  Flame_types.h
Blaze/src/Services/: Blaze.h  SparkServiceImpl.cpp  SparkServiceImpl.h
Blaze/src/gen-cpp/: Flame_types.cpp
Blaze/src/main/java/com/thilenius/blaze/: Blaze.java  BlazeArgs.java  BlazeWorld.java
Blaze/src/main/java/com/thilenius/blaze/assignment/: AssignmentLoader.java  BlazeAssignment.java  BlazeLevel.java  LoadState.java
Blaze/src/main/java/com/thilenius/blaze/assignment/aone/: ALevelOne.java  ALevelZero.java  BLevelOne.java  BLevelTwo.java  CLevelThree.java  CLevelTwo.java  DLevelFour.java  ScorchAlphaAssignment.java
Blaze/src/main/java/com/thilenius/blaze/assignment/blank/: BlankAssignment.java
Blaze/src/main/java/com/thilenius/blaze/assignment/demo/: DemoAssignment.java  DemoLevelOne.java  DemoLevelTwo.java  FourMaze.java  HelloWorldAssignment.java  OneLoadLevel.java  ThreeTurnSpark.java  TwoMoveForward.java
Blaze/src/main/java/com/thilenius/blaze/data/: IUpdateable.java  InfoQuery.java  PointsQuery.java  Queryable.java  RemoteData.java  UserQuery.java  UsersQuery.java
Blaze/src/main/java/com/thilenius/blaze/frontend/: BFEAssignmentServer.java  BFEAuthenticationServer.java  BFEInfoQueryServer.java  BFERequest.java  BFERequestDispatcher.java  BFEServer.java  BFESparkServer.java  BlazeFrontEnd.java  DifferedSparkRequest.java  IBFERequest.java  IBFERequestHandler.java  SparkRequest.java
Blaze/src/main/java/com/thilenius/blaze/player/: BlazePlayer.java  PlayerArena.java
Blaze/src/main/java/com/thilenius/blaze/redis/: RedisArena.java
Blaze/src/main/java/com/thilenius/blaze/spark/: BlazeSpark.java
Blaze/src/main/java/com/thilenius/flame/: ClientProxy.java  Flame.java  GlobalData.java  SparkBlock.java  SparkTileEntity.java
Blaze/src/main/java/com/thilenius/flame/client/: ClientProxy.java
Blaze/src/main/java/com/thilenius/flame/commands/: BlazeCommandHandler.java  HomeCommandHandler.java
Blaze/src/main/java/com/thilenius/flame/entity/: FlameActionPath.java  FlameCustomRenderer.java  FlameSupportBlock.java  FlameSupportGuiHandler.java  FlameSupportNameGui.java  FlameSupportRenderer.java  FlameTileEntity.java  IFlameRenderable.java
Blaze/src/main/java/com/thilenius/flame/http/: RestHttpServer.java
Blaze/src/main/java/com/thilenius/flame/jumbotron/: JumboBlock.java  JumboRenderer.java  JumboTileEntity.java
Blaze/src/main/java/com/thilenius/flame/rest/: HttpRequest.java  RestHttpServer.java  RestServer.java  Statement.java  StatementDispatch.java  StatementResponse.java
Blaze/src/main/java/com/thilenius/flame/spark/: ModelSparkSmall.java  SparkBlock.java  SparkRenderer.java  SparkTileEntity.java
Blaze/src/main/java/com/thilenius/flame/statement/: IBlockMessageHandler.java  SendBlockMessage.java  SetBlockRangeStatementBase.java  StatementBase.java
Blaze/src/main/java/com/thilenius/flame/transaction/: SetBlockRangeStatement.java  Statement.java  Transaction.java  TransactionForest.java
Blaze/src/main/java/com/thilenius/flame/utilities/: MathUtils.java  StringUtils.java
Blaze/src/main/java/com/thilenius/utilities/: StringUtils.java
(+783 files in other folders)
